2015-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-toggle-image-thumbnails): New command.

2015-08-06  Paul Eggert  <eggert@cs.ucla.edu>

	* message.el (message-send-form-letter): Change (message (format ...))
	to (message ...).  This lessens the probability of confusion when
	the output of `format' contains `%'.

2015-08-04  David Kastrup  <dak@gnu.org>

	* gnus-art.el (gnus-article-describe-key)
	(gnus-article-describe-key-briefly):
	Do not overwrite preexisting contents of unread-command-events.

2015-08-02  Nikolaus Rath  <Nikolaus@rath.org>

	* nnimap.el (nnimap-request-move-article)
	(nnimap-process-expiry-targets, nnimap-split-incoming-mail): Use MOVE
	extension if available.

2015-08-02  Nikolaus Rath  <Nikolaus@rath.org>

	* nnimap.el (nnimap-open-connection-1): explicitly ask server for
	capabilities instead of relying on LOGIN response.

2015-07-31  Paul Eggert  <eggert@cs.ucla.edu>

	* nnbabyl.el (nnbabyl-retrieve-headers):
	* nndiary.el (nndiary-retrieve-headers):
	* nneething.el (nneething-retrieve-headers):
	* nnmbox.el (nnmbox-retrieve-headers):
	* nnmh.el (nnmh-retrieve-headers):
	* nnml.el (nnml-retrieve-headers):
	* nnspool.el (nnspool-retrieve-headers):
	* nntp.el (nntp-retrieve-headers, nntp-retrieve-articles):
	Prefer (floor (* 100.0 NUMERATOR) DENOMINATOR) when calculating
	progress-report percentages and the like.  This avoids problems
	if (* 100 NUMERATOR) would overflow.

	* gnus-registry.el (gnus-registry-import-eld):
	* registry.el (registry-reindex):
	Use (* 100.0 ...) rather than (* 100 ...) to avoid int overflow issues.

2015-07-17  Julien Danjou  <jd@abydos>

	* sieve-mode.el (sieve-font-lock-keywords): Add missing "body" test
	command.

2015-07-11  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* gnus-registry.el (gnus-registry--set/remove-mark): Correct the order
	of function arguments.

2015-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* nnimap.el: Clean up "unused var" warnings.