@@ -1,3 +1,10 @@
+2015-08-17  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* message.el (message-overlay-get, message-overlays-in)
+	(message-window-inside-pixel-edges):
+	* messagexmas.el (message-overlay-get, message-overlays-in):
+	XEmacs compatible functions.
+
 2015-08-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* message.el (message-toggle-image-thumbnails): New command.
